fixed white space on right side and make footer logo more left

--- a/job_seeker/styles.css
+++ b/job_seeker/styles.css
@@ -212,7 +212,7 @@ footer {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 0 0px;
+    padding: 0 20px;
     flex-wrap: wrap; /* Allow wrapping on smaller screens */
 
 }
@@ -225,7 +225,7 @@ footer {
     padding-right: 10px;
     flex: 1 1 20%; /* Take full width on smaller screens */
     min-width: 200px; /* Ensure columns don't get too narrow */
-    justify-content: center; /* Center align content */
+    justify-content: left; /* Center align content */
     text-align: center; /* Center align text */
 
 }
@@ -267,7 +267,7 @@ footer {
     flex: 1 1 70%; /* Take approximately two-thirds of the width */
     text-align: center; /* Center align text */
     align-items: right;
-    padding-right: 20px;
+    
 }
 
 .footer-column {
@@ -312,6 +312,7 @@ footer {
     .footer-content {
         flex-direction: column;
         align-items: center;
+        padding:0 0px;
     }
 
     .footer-left {
@@ -321,6 +322,7 @@ footer {
         align-items: center;
         justify-content: center;
         margin-bottom: 20px; /* Add space below footer-left */
+        padding:0 0px;
     }
 
     .footer-right {
@@ -329,6 +331,7 @@ footer {
         align-items: center;
         width: 100%; /* Ensure it takes full width */
         text-align: center; /* Center align text */
+        padding:0 0px;
     }
 
     .footer-column {
